<resources>
    <string name="app_name">Global App</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="sign_in">Sign in</string>
    <string name="remember_me">Remember me</string>
    <string name="get_current_location">Get current location</string>
    <string name="categories">Categories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="distance">Distance:</string>
    <string name="call_restaurant">Call restaurant</string>
    <string name="scan_something">Scan something…</string>
    <string name="scanner_code">Scanner QRCode</string>
    <string name="please_focus_on_qr_code">Please focus on QR code</string>
    <string name="address">Address:</string>
    <string name="website">Website</string>
    <string name="menu">Menu</string>
</resources>